--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
     </properties>
 
     <prerequisites>
-        <maven>3.8.3</maven>
+        <maven>3.9.9</maven>
     </prerequisites>
 
     <name>HAPI FHIR JPA Server - Starter Project</name>
@@ -52,7 +52,12 @@
     </dependencyManagement>
 
     <dependencies>
-
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>3.0.1</version>
+			<scope>provided</scope>
+		</dependency>
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
@@ -217,10 +222,10 @@
 
         <!-- This example uses H2 embedded database. If you are using another database such as Mysql or Oracle, you may omit the following dependencies and replace them with an appropriate database client
             dependency for your database platform. -->
-        <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
-        </dependency>
+        <!-- <dependency>
+            <groupId>com.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+        </dependency> -->
 
         <!-- webjars -->
         <dependency>
@@ -388,6 +393,12 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.codehaus.jettison</groupId>
+            <artifactId>jettison</artifactId>
+            <version>1.5.4</version>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -403,6 +414,11 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>3.4.0</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.eclipse.jetty</groupId>
+                    <artifactId>jetty-maven-plugin</artifactId>
+                    <version>9.4.36.v20210114</version>
                 </plugin>
             </plugins>
         </pluginManagement>
