--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -41,9 +41,9 @@ spring:
     fail-on-missing-locations: false
   datasource:
     #url: 'jdbc:h2:file:./target/database/h2'
-    url: jdbc:postgresql://localhost:5432/hapi
-    username: "admin"
-    password: "admin"
+    url: ${DB_CONN_STRING}
+    username: ${DB_USER}
+    password: ${DB_PWD}
     driverClassName: org.postgresql.Driver
     max-active: 15
 
